--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import-normalize; /* bring in normalize.css styles */
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Zilla+Slab&display=swap');
 
 html, body, #root {
   height: 100%;
