--- a/src/components/NextButton.css
+++ b/src/components/NextButton.css
@@ -1,5 +1,39 @@
 .NextButton {
-  padding: 1em 2em;
   font-size: 1.5em;
   border-radius: 3px;
+  width: 180px;
+  height: 60px;
+  cursor: pointer;
+  background: transparent;
+  border: 1px solid #999;
+  outline: none;
+  transition: .5s ease-in-out;
+  background: #fafafa;
+  position: relative;
+}
+
+.NextButton svg {
+  position: absolute;
+  left: 0;
+  top: 0;
+  fill: none;
+  stroke: red;
+  stroke-dasharray: 150 480;
+  stroke-dashoffset: 150;
+  transition: .5s ease-in-out;
+}
+
+.NextButton:hover {
+  transition: 1s ease-in-out;
+  background: #ddd;
+}
+
+.NextButton:hover svg {
+  stroke-dashoffset: -480;
+}
+
+.NextButton span {
+  color: #333;
+  font-size: 18px;
+  font-weight: 100;
 }
