--- a/src/components/Page.css
+++ b/src/components/Page.css
@@ -1,8 +1,17 @@
 .Page {
-  position: relative;
+  position: absolute;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  width: 740px;
+  height: 80%;
+  background: rgba(255, 255, 255, 1);
+  border-radius: 4px;
+  margin: auto;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 9;
 }
 
 .Page .page-head {
