--- a/src/game/1_intro/Intro.css
+++ b/src/game/1_intro/Intro.css
@@ -1,13 +1,5 @@
 .Intro {
-  position: absolute;
-  width: 740px;
-  height: 80%;
-  background: rgba(255, 255, 255, 1);
-  border-radius: 4px;
-  margin: auto;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
+  position: relative;
   z-index: 9;
+  height: 100%;
 }
